--- a/views/skills.html
+++ b/views/skills.html
@@ -9,6 +9,34 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="top">
+       
+        <div class="leftTop">
+            <div class="musico"><h3>MÚSICO</h3>
+                <ul>
+                    <li>Más de diez años tocando el teclado</li>
+                    <li>Más de ocho años tocando el bajo</li>
+                    <li>Amplio uso de DAW's</li>
+                    <li>Curso 'Cinematic Composing:Orchestral mockups'</li>
+                    <li>Curso de composición para medios audiovisuales en Yamaha music School</li>
+                </ul>
+            </div>
+        </div>
+        <div class="skillsText"><h1>SKILLS</h1></div>
+        <div class="rightTop">
+            <div class="programacion"><h3>PROGRAMACIÓN</h3>
+                <ul>
+                    <li>¡Hecha un vistazo a mis <a href="https://github.com/DanielC1492" >repos</a>!</li>
+                    <li>Lenguajes
+                        <ul>
+                            <div class="htmlIcon"></div><li>HTML</li><i class="fab fa-html5"></i>
+                            <div class="cssIcon"></div><li>CSS</li><i class="fab fa-css3-alt"></i>
+                    </ul></li>
+                </ul> 
+                <div class="programacion"><h3>PERSONAL</h3>           
+            </div>
+            
+        </div>
+    </div>
 </body>
 </html>
