--- a/views/about.css
+++ b/views/about.css
@@ -1,3 +1,4 @@
+
 body{
     background-image: url(http://cdn30.us1.fansshare.com/image/wallpapergreen/tumblr-static-mint-background-wallpaper-mint-green-979721691.jpg);
 }
@@ -5,18 +6,30 @@ body{
 .top{
     height: 33.33vh;
     width: 100vw;
+    display: flex;
+    flex-direction: column;
 }
 
 .mid{
     height: 33.33vh;
     width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+
+.topMid{
+    height: 10em;
 }
 
 .quienSoy{
     text-align: center;
-    margin-left: 3em;
-    margin-right: 3em;
-    margin-top: 3em;
+    height: 10em;
+    margin-left: 4em;
+    margin-right: 4em;
+}
+
+.botMid{
+    height: 10em;
 }
 
 .bot{
@@ -24,13 +37,12 @@ body{
     width: 100vw;
 }
 
-.miFoto{
-    height: 10em;
-    width: 10em;
-    justify-self: center;
-    align-self: center;
-    margin-left: 22vw;
+
+.sobreMiTexto{
+    text-align: center;
     margin-top: 3em;
+    text-shadow: 0.9em;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .miFotoItself{
@@ -38,7 +50,7 @@ body{
     width: 10em;
     justify-self: center;
     align-self: center;
-    margin-left: 22vw;
+    margin-left: vw;
     margin-top: 3em;
     border-radius: 2em;
 }
@@ -47,15 +59,23 @@ body{
     .miFotoItself{
         display: flex;
         justify-content: center;
-        margin-right: 2em;
+        height: 6em;
+        width: 6em;
 
     }
 }
 
 @media (max-width: 375px){
-    .miFoto{
+    .quienSoy{
         display: flex;
         justify-content: center;
+        font-size: 0.5em;
+    }
+}
+
+@media (max-width: 1024px){
+    .quienSoy{
+       font-size: 2em;
 
     }
 }
