--- a/views/about.html
+++ b/views/about.html
@@ -12,12 +12,17 @@
 <body>
     <div class="background">
         <div class="top">
-            <div class="miFoto"> <img src="WhatsApp Image 2021-01-19 at 16.41.19.jpeg" class="miFotoItself">
+            <div class="sobreMiTexto">SOBRE MI</div>
+
+            <img src="WhatsApp Image 2021-01-19 at 16.41.19.jpeg" class="miFotoItself">
             </div>
+            
         </div>
         <div class="mid">
+            <div class="topMid"></div>
+            <div class="botMid"></div>
             <div class="quienSoy">
-                Llevo varios años dedicam¡ndome al sector del espectáculo y ahora estoy en un momento de renovación personal y laboral en el que me he propuesto superarme a mi mismo.
+                Llevo varios años dedicandome al sector del espectáculo y ahora estoy en un momento de renovación personal y laboral en el que me he propuesto superarme a mi mismo.
             </div>
         </div>
         <div class="bot"></div>
