Casi terminado salvo por detalles. Entregable incluido README

--- a/views/skills.html
+++ b/views/skills.html
@@ -14,11 +14,11 @@
         <div class="leftTop">
             <div class="musico"><h3>MÚSICO</h3>
                 <ul>
-                    <li>Más de diez años tocando el teclado</li>
-                    <li>Más de ocho años tocando el bajo</li>
-                    <li>Amplio uso de DAW's</li>
-                    <li>Curso 'Cinematic Composing:Orchestral mockups'</li>
-                    <li>Curso de composición para medios audiovisuales en Yamaha music School</li>
+                    <div class="teclado">Más de diez años tocando el teclado</div>
+                    <div class="bajo">Más de ocho años tocando el bajo</div>
+                    <div class="daw">Amplio uso de DAW's</div>
+                    <div class="cinematic">Curso 'Cinematic Composing:Orchestral mockups'</div>
+                    <div class="yamaha">Curso de composición para medios audiovisuales en Yamaha music School</div>
                 </ul>
             </div>
         </div>
@@ -26,12 +26,12 @@
         <div class="rightTop">
             <div class="programacion"><h3>PROGRAMACIÓN</h3>
                 <ul>
-                    <li>¡Hecha un vistazo a mis <a href="https://github.com/DanielC1492" >repos</a>!</li>
-                    <li>Lenguajes
+                    <div class="github">¡Hecha un vistazo a mis <a href="https://github.com/DanielC1492" >repos</a>!</div>
+                    <div class="lenguajes">Lenguajes</div>
                         <ul>
-                            <div class="htmlIcon"></div><li>HTML</li><i class="fab fa-html5"></i>
-                            <div class="cssIcon"></div><li>CSS</li><i class="fab fa-css3-alt"></i>
-                    </ul></li>
+                            <div class="htmlIcon">HTML</div><i class="fab fa-html5"></i>
+                            <div class="cssIcon">CSS</div><i class="fab fa-css3-alt"></i>
+                    </ul>
                 </ul> 
                 <div class="programacion"><h3>PERSONAL</h3>           
             </div>
