--- a/views/skills.css
+++ b/views/skills.css
@@ -51,3 +51,51 @@ body{
     justify-content: center;
 
 }
+
+@media (max-width: 375px){
+    .programacion{
+        margin-right: 2em;
+
+    }
+}
+
+@media (max-width: 375px){
+    .teclado{
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 375px){
+    .bajo{
+        font-size: 1em;
+
+    }
+}
+
+@media (max-width: 375px){
+    .daw{
+        font-size: 1em;
+
+    }
+}
+
+@media (max-width: 375px){
+    .cinematic{
+        font-size: 1em;
+
+    }
+}
+
+@media (max-width: 375px){
+    .yamaha{
+        font-size: 1em;
+
+    }
+}
+
+@media (max-width: 375px){
+    h3{
+        font-size: 1.2em;
+
+    }
+}
