--- a/views/contact.css
+++ b/views/contact.css
@@ -2,3 +2,46 @@ body{
     background-image: url(http://cdn30.us1.fansshare.com/image/wallpapergreen/tumblr-static-mint-background-wallpaper-mint-green-979721691.jpg);
 }
 
+.contacto{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 50em;
+    margin-top: 25em;
+}
+
+.email{
+    font-size: 4em;
+}
+
+.telefono{
+    font-size: 4em;
+}
+
+@media (max-width: 375px){
+    .contacto{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        margin: auto;
+        margin-top: 20em;
+    }
+}
+
+@media (max-width: 375px){
+    .email{
+        display: flex;
+        justify-content: center;
+        font-size: 1.5em;
+
+    }
+}
+
+@media (max-width: 375px){
+    .telefono{
+        display: flex;
+        justify-content: center;
+        font-size: 1.5em;
+
+    }
+}
