--- a/views/contact.html
+++ b/views/contact.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
-    <div class="email">email</div>
-    <div class="telefono"></div>
+    <div class="contacto">
+        <div class="email"><i class="fab fa-mailchimp"></i>danielcastillog92@gmail.com</i>
+        </div>
+        <div class="telefono"><i class="fas fa-mobile-alt"></i>613-591-402</div>
+    </div>
+    
 </body>
 </html>
